# PythonBMA

./: requirements.txt
.github/workflows/: pipeline.yaml
config/: config.yaml
data/: test.csv
src/: main.py
src/BMA_SSVS/: BMA.py  README.md  pyproject.toml
src/BMA_SSVS/BMA_SSVS/: BMA.py  __init__.py
src/BMA_SSVS/tests/: conftest.py  test_bma_functions.py  test_expected_sign.py
